update methods & swag doc
