# example/docs/swagger.json
@@ -13,7 +13,7 @@
         }
     },
     "paths": {
-        "/conf": {
+        "/env": {
             "get": {
                 "description": "Internal method",
                 "consumes": [
@@ -30,31 +30,31 @@
                     "200": {
                         "description": "desc",
                         "schema": {
-                            "$ref": "#/definitions/api.JSONResult"
+                            "$ref": "#/definitions/go_base_api.JSONResult"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/api.JSONResult"
+                            "$ref": "#/definitions/go_base_api.JSONResult"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/api.JSONResult"
+                            "$ref": "#/definitions/go_base_api.JSONResult"
                         }
                     },
                     "405": {
                         "description": "Method Not Allowed",
                         "schema": {
-                            "$ref": "#/definitions/api.JSONResult"
+                            "$ref": "#/definitions/go_base_api.JSONResult"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/api.JSONResult"
+                            "$ref": "#/definitions/go_base_api.JSONResult"
                         }
                     }
                 }
@@ -77,33 +77,80 @@
                     "200": {
                         "description": "desc",
                         "schema": {
-                            "$ref": "#/definitions/api.JSONResult"
+                            "$ref": "#/definitions/go_base_api.JSONResult"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/api.JSONResult"
+                            "$ref": "#/definitions/go_base_api.JSONResult"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/api.JSONResult"
+                            "$ref": "#/definitions/go_base_api.JSONResult"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/api.JSONResult"
+                            "$ref": "#/definitions/go_base_api.JSONResult"
+                        }
+                    }
+                }
+            }
+        },
+        "/info": {
+            "get": {
+                "description": "Internal method",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "internal"
+                ],
+                "summary": "Show config for service",
+                "responses": {
+                    "200": {
+                        "description": "desc",
+                        "schema": {
+                            "$ref": "#/definitions/go_base_api.JSONResult"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/go_base_api.JSONResult"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/go_base_api.JSONResult"
+                        }
+                    },
+                    "405": {
+                        "description": "Method Not Allowed",
+                        "schema": {
+                            "$ref": "#/definitions/go_base_api.JSONResult"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/go_base_api.JSONResult"
                         }
                     }
                 }
             }
         },
         "/vault/api/v1/getAllAppRolesToken": {
-            "get": {
-                "description": "vault method getAllAppRolesToken",
+            "put": {
+                "description": "Method generate all user vault token  for vlid vault approles by user groups",
                 "consumes": [
                     "application/json"
                 ],
@@ -113,38 +160,49 @@
                 "tags": [
                     "vault"
                 ],
-                "summary": "getAllAppRolesToken",
+                "summary": "Generate all tokens for user",
+                "parameters": [
+                    {
+                        "description": "User info",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/go_vault.VaultUser"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "desc",
                         "schema": {
-                            "$ref": "#/definitions/vault.JSONResult"
+                            "$ref": "#/definitions/go_vault.JSONResult"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/vault.JSONResult"
+                            "$ref": "#/definitions/go_vault.JSONResult"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/vault.JSONResult"
+                            "$ref": "#/definitions/go_vault.JSONResult"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/vault.JSONResult"
+                            "$ref": "#/definitions/go_vault.JSONResult"
                         }
                     }
                 }
             }
         },
         "/vault/api/v1/getAppRoleToken": {
-            "get": {
-                "description": "vault method getAppRoleToken",
+            "put": {
+                "description": "Method generate user vault token for vlid vault approle by curent group",
                 "consumes": [
                     "application/json"
                 ],
@@ -154,30 +212,48 @@
                 "tags": [
                     "vault"
                 ],
-                "summary": "getAppRoleToken",
+                "summary": "Generate user vault token for curent group",
+                "parameters": [
+                    {
+                        "description": "User info",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/go_vault.VaultUser"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "grope name for generate token",
+                        "name": "group",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "desc",
                         "schema": {
-                            "$ref": "#/definitions/vault.JSONResult"
+                            "$ref": "#/definitions/go_vault.JSONResult"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/vault.JSONResult"
+                            "$ref": "#/definitions/go_vault.JSONResult"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/vault.JSONResult"
+                            "$ref": "#/definitions/go_vault.JSONResult"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/vault.JSONResult"
+                            "$ref": "#/definitions/go_vault.JSONResult"
                         }
                     }
                 }
@@ -185,7 +261,7 @@
         },
         "/vault/api/v1/getAppRoles": {
             "get": {
-                "description": "vault method getAppRoles",
+                "description": "Method for get all existing vault approles",
                 "consumes": [
                     "application/json"
                 ],
@@ -195,38 +271,38 @@
                 "tags": [
                     "vault"
                 ],
-                "summary": "getAppRoles",
+                "summary": "Get Vault AppRoles",
                 "responses": {
                     "200": {
                         "description": "desc",
                         "schema": {
-                            "$ref": "#/definitions/vault.JSONResult"
+                            "$ref": "#/definitions/go_vault.JSONResult"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/vault.JSONResult"
+                            "$ref": "#/definitions/go_vault.JSONResult"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/vault.JSONResult"
+                            "$ref": "#/definitions/go_vault.JSONResult"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/vault.JSONResult"
+                            "$ref": "#/definitions/go_vault.JSONResult"
                         }
                     }
                 }
             }
         },
         "/vault/api/v1/getValidRolesForUser": {
-            "get": {
-                "description": "vault method getValidRolesForUser",
+            "post": {
+                "description": "Method get all vlid vault approles for user",
                 "consumes": [
                     "application/json"
                 ],
@@ -236,30 +312,41 @@
                 "tags": [
                     "vault"
                 ],
-                "summary": "getValidRolesForUser",
+                "summary": "Get user approles",
+                "parameters": [
+                    {
+                        "description": "User info",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/go_vault.VaultUser"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "desc",
                         "schema": {
-                            "$ref": "#/definitions/vault.JSONResult"
+                            "$ref": "#/definitions/go_vault.JSONResult"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/vault.JSONResult"
+                            "$ref": "#/definitions/go_vault.JSONResult"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/vault.JSONResult"
+                            "$ref": "#/definitions/go_vault.JSONResult"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/vault.JSONResult"
+                            "$ref": "#/definitions/go_vault.JSONResult"
                         }
                     }
                 }
@@ -267,7 +354,7 @@
         }
     },
     "definitions": {
-        "api.JSONResult": {
+        "go_base_api.JSONResult": {
             "type": "object",
             "properties": {
                 "code": {
@@ -279,7 +366,7 @@
                 }
             }
         },
-        "vault.JSONResult": {
+        "go_vault.JSONResult": {
             "type": "object",
             "properties": {
                 "code": {
@@ -287,6 +374,23 @@
                 },
                 "data": {},
                 "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "go_vault.VaultUser": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "grope_names": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "user_name": {
                     "type": "string"
                 }
             }
